# goss

./: .buildinfo  .bumpversion.cfg  .cspell_dict.txt  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.html  Dockerfile  INSTALL  LICENSE  Makefile  README.html  README.md  _config.yml  _toc.yml  bidomain.html  cmake.local  cspell.config.yaml  demo.html  genindex.html  goss.html  goss.scripts.html  index.html  install.html  lorentz.html  main.cpp  modules.html  monodomain.html  multicellmodel.html  niederer_benchmark.html  objects.inv  oscilator_v1.html  oscilator_v2.html  oscilator_v3.html  presentation.html  py-modindex.html  pybind11.cmake  pyproject.toml  search.html  searchindex.js  (+4 more)
_modules/: index.html
_sources/: CONTRIBUTING.md  README.md  bidomain.md.txt  demo.rst.txt  goss.rst.txt  goss.scripts.rst.txt  lorentz.md.txt  modules.rst.txt  monodomain.md.txt  multicellmodel.md.txt  (+7 more)
cpp/: CMakeLists.txt  GossConfig.cmake.in
cpp/goss/: AdaptiveExplicitSolver.cpp  AdaptiveExplicitSolver.h  AdaptiveImplicitSolver.cpp  AdaptiveImplicitSolver.h  BasicImplicitEuler.cpp  BasicImplicitEuler.h  DoubleVector.h  ESDIRK23a.cpp  ESDIRK23a.h  ESDIRK4O32.cpp  ESDIRK4O32.h  ExplicitEuler.cpp  ExplicitEuler.h  GRL1.cpp  GRL1.h  GRL2.cpp  GRL2.h  ImplicitEuler.cpp  ImplicitEuler.h  ImplicitODESolver.cpp  ImplicitODESolver.h  LogLevel.h  LogManager.h  LogStream.cpp  Logger.cpp  ODE.cpp  ODE.h  ODESolver.h  ODESystemSolver.cpp  ODESystemSolver.h  ParameterizedODE.h  Parameters.h  Progress.h  RK2.cpp  RK2.h  RK4.cpp  RK4.h  RKF32.cpp  RKF32.h  RL1.cpp  (+16 more)
cpp/include/: goss
cpp/include/goss_bits/: AdaptiveExplicitSolver.h  BasicImplicitEuler.h  ESDIRK23a.h  ESDIRK4O32.h  ExplicitEuler.h  GRL2.h  ImplicitODESolver.h  ODE.h  Parameter.h  ParameterizedODE.h  Parameters.h  Progress.h  RK4.h  RKF32.h  RL1.h  RL2.h  ThetaSolver.h  timing.h
cpp/src/: AdaptiveExplicitSolver.cpp  BasicImplicitEuler.cpp  ESDIRK23a.cpp  ESDIRK4O32.cpp  ExplicitEuler.cpp  GRL1.cpp  ImplicitEuler.cpp  ImplicitODESolver.cpp  LogManager.cpp  LogStream.cpp  ODE.cpp  ODESystemSolver.cpp  Parameter.cpp  Parameters.cpp  Progress.cpp  RK2.cpp  RK4.cpp  RKF32.cpp  RL1.cpp  RL2.cpp  Table.cpp  boost.cmake  timing.cpp
cpp/tests/: Arenstorf.h  Brusselator.h  CMakeLists.txt  EulerRigidBody.h  FG.h  NonLinOscillator.h  Panfilov.h  PanfilovCSE.h  PanfilovCSEArray.h  PanfilovNoIntermediates.h  Robertson.h  SaltzLorenz.h  Sin.h  VDP.h  Winslow.h  WinslowCSE.h  WinslowCSEArray.h  WinslowNoIntermediates.h  beeler_reuter_1977.h  beeler_reuter_1977.ode  fhn.h  ode.cpp  odesystem.cpp  van_der_Pol.h
gosol/: AdaptiveExplicitSolver.cpp  AdaptiveExplicitSolver.h  AdaptiveImplicitSolver.cpp  AdaptiveImplicitSolver.h  CMakeList.txt  CMakeLists.txt  DoubleVector.h  ESDIRK4O32.cpp  ESDIRK4O32.h  ExplicitEuler.cpp  ExplicitEuler.h  GRL1.cpp  GRL1.h  GRL2.cpp  GRL2.h  ImplicitEuler.cpp  ImplicitEuler.h  ImplicitMidPointSolver.cpp  ImplicitMidPointSolver.h  ImplicitODESolver.cpp  ImplicitODESolver.h  ODE.cpp  ODE.h  ODESolver.cpp  ODESolver.h  RK2.cpp  RK2.h  RK4.cpp  RK4.h  RKF32.cpp  RKF32.h  RKF34.cpp  RKF34.h  RL.cpp  RL.h  SDIRK2O2.cpp  SDIRK2O2.h  SDIRK2O3.cpp  SDIRK2O3.h  ThetaSolver.cpp  (+2 more)
goss/: AdaptiveExplicitSolver.cpp  AdaptiveExplicitSolver.h  AdaptiveImplicitSolver.cpp  AdaptiveImplicitSolver.h  BasicImplicitEuler.cpp  BasicImplicitEuler.h  CMakeLists.txt  DoubleVector.h  ESDIRK23a.cpp  ESDIRK23a.h  ESDIRK4O32.cpp  ESDIRK4O32.h  ExplicitEuler.cpp  ExplicitEuler.h  GRL1.cpp  GRL1.h  GRL2.cpp  GRL2.h  ImplicitEuler.cpp  ImplicitEuler.h  ImplicitMidPointSolver.h  ImplicitODESolver.cpp  ImplicitODESolver.h  LinearizedODE.h  LogStream.cpp  LogStream.h  Logger.cpp  ODE.cpp  ODE.h  ODESolver.cpp  ODESolver.h  ODESystemSolver.cpp  ODESystemSolver.h  ParameterizedODE.cpp  ParameterizedODE.h  Parameters.cpp  RK2.cpp  RK2.h  RK4.cpp  RK4.h  (+20 more)
goss/notuse/: ImplicitMidPointSolver.cpp  RKF34.cpp  RKF34.h  SDIRK2O2.cpp  SDIRK2O2.h  ThetaSolver.h
goss/swig/: CMakeLists.txt  exceptions.i  goss.i  goss_interface.i  post.i  pre.i  shared_ptr_classes.i  typemaps.i  version.i
gossol/: AdaptiveExplicitSolver.cpp  AdaptiveExplicitSolver.h  AdaptiveImplicitSolver.cpp  AdaptiveImplicitSolver.h  CMakeLists.txt  DoubleVector.h  ESDIRK4O32.cpp  ESDIRK4O32.h  ExplicitEuler.cpp  ExplicitEuler.h  GRL1.cpp  GRL1.h  GRL2.cpp  GRL2.h  ImplicitEuler.cpp  ImplicitEuler.h  ImplicitMidPointSolver.cpp  ImplicitMidPointSolver.h  ImplicitODESolver.cpp  ImplicitODESolver.h  ODE.cpp  ODE.h  ODESolver.cpp  ODESolver.h  RK2.cpp  RK2.h  RK4.cpp  RK4.h  RKF32.cpp  RKF32.h  RKF34.cpp  RKF34.h  RL.cpp  RL.h  SDIRK2O2.cpp  SDIRK2O2.h  SDIRK2O3.cpp  SDIRK2O3.h  ThetaSolver.cpp  ThetaSolver.h  (+1 more)
python/: CMakeLists.txt  ODE.cpp  codegeneration.py  compilemodule.py  goss.cpp  pyproject.toml  setup.py  wrapper.cpp
python/goss/: __init__.py  __main__.py  cli.py  codegeneration.py  compilemodule.py  cuda.py  dolfinutils.py  goss.cpp  ode.py  solvers.py  systemsolver.py
python/goss/scripts/: __init__.py  goss-solvers  gossrun  gotran2goss.py
test/: Arenstorf.h  CMakeLists.txt  EulerRigidBody.h  FG.h  FIXME  NonLinOscillator.h  Panfilov.h  PanfilovCSE.h  PanfilovCSEArray.h  PanfilovNoIntermediates.h  Sin.h  VDP.h  Winslow.h  WinslowCSE.h  WinslowCSEArray.h  WinslowNoIntermediates.h  goss.py  ode.cpp  odesystem.cpp  panfilov.ode  van_der_Pol.h  winslow.ode
test/cmake/: internal_utils.cmake
test/cpp/: Arenstorf.h  Brusselator.h  EulerRigidBody.h  FG.h  NonLinOscillator.h  Panfilov.h  PanfilovCSE.h  PanfilovCSEArray.h  PanfilovNoIntermediates.h  Robertson.h  SaltzLorenz.h  Sin.h  VDP.h  Winslow.h  WinslowCSE.h  WinslowCSEArray.h  WinslowNoIntermediates.h  beeler_reuter_1977.h  fhn.h  fhn.ode  ode.cpp  van_der_Pol.h
test/cpp/cmake/: internal_utils.cmake
test/gtest/: gtest-death-test.cc  gtest.cc
test/ode/: Arenstorf.h  Brusselator.h  EulerRigidBody.h  FG.h  NonLinOscillator.h  Panfilov.h  PanfilovCSE.h  PanfilovCSEArray.h  Robertson.h  SaltzLorenz.h  Sin.h  VDP.h  Winslow.h  WinslowCSE.h  WinslowCSEArray.h  goss.py  ode_test.cpp
test/python/: test_solvers.py
(+199 files in other folders)
