[metadata]
name = goss
description = General ODE System Solvers (GOSS)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ComputationalPhysiology/goss
author = Johan Hake, Henrik Finsberg
author_email = henriknf@simula.no
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = ODE, solver, system, equations, cuda

[options]
packages = find:
include_package_data = True
install_requires =
    numpy
    modelparameters
    gotran
python_requires = >=3.6
package_dir =
    =src/python
zip_safe = False


[options.packages.find]
where = src/python

[options.extras_require]
dev =
    Sphinx
    black
    bump2version
    flake8
    ipython
    isort
    mypy
    pdbpp
    pip
    pre-commit
    pytest
    pytest-cov
    twine
    wheel

[flake8]
exclude = docs
ignore = E203, E266, E501, W503, E731
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=python --cov-report html --cov-report xml --cov-report term-missing -v
testpaths =
    tests/python

[mypy]
files = python,tests
ignore_missing_imports = true
exclude = docs
